--- a/app/src/main/res/layout/newtrack_dialog.xml
+++ b/app/src/main/res/layout/newtrack_dialog.xml
@@ -13,7 +13,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dip">
+    android:padding="20dp">
 
     <TextView
         android:layout_width="match_parent"
